projects/vb6parse/snapshots/syntax/library/statements/rmdir/rmdir_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/filesystem/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: RmDirStatement
      children:
        - kind: RmDirKeyword
          text: RmDir
        - kind: Whitespace
          text: "    "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
    - kind: Whitespace
      text: "    "
